bindings/vala/grx-3.0.vapi


    /* ================================================================== */
    /*                          JPEG FUNCTIONS                            */
    /*  these functions may not be installed or available on all system   */
    /* ================================================================== */

    [CCode (cname = "GrJpegSupport")]
    public bool jpeg_support ();
    [CCode (cname = "GrQueryJpeg")]
    public Result query_jpeg (string file_name, out int width, out int height);

    /* ================================================================== */
    /*               MISCELLANEOUS UTILITIY FUNCTIONS                     */
    /* ================================================================== */

    [CCode (cname = "GrResizeGrayMap")]
    public void resize_gray_map (uchar *map, int pitch, int old_width, int old_height, int new_width, int new_height);
    [CCode (cname = "GrMatchString")]
    public int match_string (string pattern, string str);
    [CCode (cname = "GrSetWindowTitle")]
    public void set_window_title (string title);
    [CCode (cname = "GrSleep")]
    public void sleep (int msec);
    [CCode (cname = "GrFlush")]
    public void flush ();
    [CCode (cname = "GrMsecTime")]
    public long msec_time ();
}
